# CBR-challenger-2025

./: README.md  envia.bat  pyproject.toml  visualizar_mapa.py
cbr/: calibra_branco.py  calibra_preto.py  calibra_sensor_cor_esq.py  calibra_sensor_cor_garra.py  main.py  mapa.py  settings.py  teclado.py  teste.py  teste_depositar_bloco.py  teste_garra.py  teste_giroscopio.py  teste_motores.py  teste_procurar_lixeira.py  teste_seguidor.py  teste_sensor_cor_esq.py  teste_sensor_cor_garra.py  teste_sensor_seguidor.py  teste_sensores_cor_linha.py  teste_sensores_laterais.py
cbr/libs/: configuracao.py  giroscopio.py  motores.py  sensorCorReflexao.py  tcs34725.py  teclado.py  tela.py  vl53.py
cbr/src/: definicao_cores.py  mapa.py  servico_web.py  simulador.py
cbr/src/atuadores/: __init__.py  interface_atuador.py
cbr/src/atuadores/robo/: __init__.py  garra.py  seguidor_linha.py  tela_teclado.py
cbr/src/atuadores/simulador/: __init__.py
cbr/src/estrategias/: estrategia_area_verde.py  estrategia_base.py  estrategia_mapa.py
